fix bug causing search bar to jump to top of page when navigating between components

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -8,7 +8,6 @@ body {
   }
 
   html {
-    height: 101%;
     overflow-x: hidden;
   }
 
